# ooicgsn_glider_dvl

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
glider_dvl_analysis/: dataset.py
notebooks/: 1-data-access-and-download.ipynb  2-Process-and-merge-datasets.ipynb  3-Data-analysis.ipynb
ooicgsn_glider_dvl/: __init__.py  features.py  mapping.py  merge.py  plots.py  profiles.py  qc.py  utils.py
ooicgsn_glider_dvl/modeling/: predict.py  train.py
