[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ooicgsn_glider_dvl"
version = "0.0.1"
description = "OOI Pioneer-array glider DVL quality control, validation, and analyis"
authors = [
  { name = "Andrew Reed" , email = "areed@whoi.edu" },
  { name = "Brayden Mikulski", email = "brayden.mikulski@whoi.edu"}
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["ooicgsn_glider_dvl"]
include = ["pyproject.toml", "ooicgsn_glider_dvl/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ooicgsn_glider_dvl"]
force-sort-within-sections = true

